{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 215,
  "lineage": "32e0f164-51b0-ad49-e4b4-ed7dfce90450",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:359854597120:loadbalancer/app/my-alb/901f4883c60d39e7",
            "arn_suffix": "app/my-alb/901f4883c60d39e7",
            "dns_name": "my-alb-1605778287.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:359854597120:loadbalancer/app/my-alb/901f4883c60d39e7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "security_groups": [
              "sg-0ef8fab5aa75496ad"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-042b2fe08a3dfc4b6"
              },
              {
                "subnet_id": "subnet-0c0f034eb71156d3c"
              }
            ],
            "subnets": [
              "subnet-042b2fe08a3dfc4b6",
              "subnet-0c0f034eb71156d3c"
            ],
            "vpc_id": "vpc-0cd1a50550a29a4b3",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.alb.aws_security_group.my-alb-sg",
            "module.vpc.aws_subnet.PublicSubnet1",
            "module.vpc.aws_subnet.PublicSubnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "my_alb_target_group_attachment1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:359854597120:targetgroup/tf-example-lb-tg/5a8bfe50ffb455c3-20200917133006390900000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:359854597120:targetgroup/tf-example-lb-tg/5a8bfe50ffb455c3",
            "target_id": "i-0f587e3d6b8474295"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.test",
            "module.myec2.aws_instance.myec2-1",
            "module.vpc.aws_security_group.SecurityGroup1",
            "module.vpc.aws_subnet.PublicSubnet1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "my_alb_target_group_attachment2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:359854597120:targetgroup/tf-example-lb-tg/5a8bfe50ffb455c3-20200917132956489300000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:359854597120:targetgroup/tf-example-lb-tg/5a8bfe50ffb455c3",
            "target_id": "i-0d215b8bf8fa1f8b9"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.test",
            "module.myec2.aws_instance.myec2-2",
            "module.vpc.aws_security_group.SecurityGroup1",
            "module.vpc.aws_subnet.PublicSubnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec2-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ebc1ac48dfd14136",
            "arn": "arn:aws:ec2:ap-south-1:359854597120:instance/i-0f587e3d6b8474295",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f587e3d6b8474295",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "skweb",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02aaa3157975c1da6",
            "private_dns": "ip-10-0-101-66.ap-south-1.compute.internal",
            "private_ip": "10.0.101.66",
            "public_dns": "ec2-13-127-78-89.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.78.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07bddab2841a11019",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-042b2fe08a3dfc4b6",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06601dfb5b8ded590"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.SecurityGroup1",
            "module.vpc.aws_subnet.PublicSubnet1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec2-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ebc1ac48dfd14136",
            "arn": "arn:aws:ec2:ap-south-1:359854597120:instance/i-0d215b8bf8fa1f8b9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d215b8bf8fa1f8b9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "skweb",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aecdd047ce6b8e97",
            "private_dns": "ip-10-0-102-121.ap-south-1.compute.internal",
            "private_ip": "10.0.102.121",
            "public_dns": "ec2-13-235-49-119.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.49.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00670bfbaa9d719b3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c0f034eb71156d3c",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06601dfb5b8ded590"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.SecurityGroup1",
            "module.vpc.aws_subnet.PublicSubnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Igw",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:359854597120:internet-gateway/igw-090994fa39cc5a495",
            "id": "igw-090994fa39cc5a495",
            "owner_id": "359854597120",
            "vpc_id": "vpc-0cd1a50550a29a4b3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end_listner",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:359854597120:listener/app/my-alb/901f4883c60d39e7/f7366a0d476791f3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:359854597120:targetgroup/tf-example-lb-tg/5a8bfe50ffb455c3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:359854597120:listener/app/my-alb/901f4883c60d39e7/f7366a0d476791f3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:359854597120:loadbalancer/app/my-alb/901f4883c60d39e7",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_alb.front_end",
            "module.alb.aws_lb_target_group.test",
            "module.alb.aws_security_group.my-alb-sg",
            "module.vpc.aws_subnet.PublicSubnet1",
            "module.vpc.aws_subnet.PublicSubnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:359854597120:targetgroup/tf-example-lb-tg/5a8bfe50ffb455c3",
            "arn_suffix": "targetgroup/tf-example-lb-tg/5a8bfe50ffb455c3",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:359854597120:targetgroup/tf-example-lb-tg/5a8bfe50ffb455c3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cd1a50550a29a4b3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTablePublic",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a58ed191d120a705",
            "owner_id": "359854597120",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-090994fa39cc5a495",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "vpc_id": "vpc-0cd1a50550a29a4b3"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.Igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AssociationForRouteTablePublic0",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08481222f5a946f8d",
            "route_table_id": "rtb-0a58ed191d120a705",
            "subnet_id": "subnet-042b2fe08a3dfc4b6"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.Igw",
            "module.vpc.aws_route_table.RouteTablePublic",
            "module.vpc.aws_subnet.PublicSubnet1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SecurityGroup1",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:359854597120:security-group/sg-06601dfb5b8ded590",
            "description": "Build a custom security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06601dfb5b8ded590",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "custom-sg",
            "name_prefix": "",
            "owner_id": "359854597120",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0cd1a50550a29a4b3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-alb-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:359854597120:security-group/sg-0ef8fab5aa75496ad",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ef8fab5aa75496ad",
            "ingress": [],
            "name": "my-alb-sg",
            "name_prefix": "",
            "owner_id": "359854597120",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0cd1a50550a29a4b3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1197197703",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ef8fab5aa75496ad",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.alb.aws_security_group.my-alb-sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-4057044018",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ef8fab5aa75496ad",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.alb.aws_security_group.my-alb-sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-781410143",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ef8fab5aa75496ad",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.alb.aws_security_group.my-alb-sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet1",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:359854597120:subnet/subnet-042b2fe08a3dfc4b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-042b2fe08a3dfc4b6",
            "map_public_ip_on_launch": true,
            "owner_id": "359854597120",
            "tags": {
              "Name": "Public Subnet AZ A"
            },
            "vpc_id": "vpc-0cd1a50550a29a4b3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet2",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:359854597120:subnet/subnet-0c0f034eb71156d3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0c0f034eb71156d3c",
            "map_public_ip_on_launch": true,
            "owner_id": "359854597120",
            "tags": {
              "Name": "Public Subnet AZ B"
            },
            "vpc_id": "vpc-0cd1a50550a29a4b3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:359854597120:vpc/vpc-0cd1a50550a29a4b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d5f1abedfb6cf28b",
            "default_route_table_id": "rtb-0734e434046de411a",
            "default_security_group_id": "sg-029db340865d2cf76",
            "dhcp_options_id": "dopt-83837ee8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cd1a50550a29a4b3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0734e434046de411a",
            "owner_id": "359854597120",
            "tags": {
              "Name": "customvpc"
            }
          }
        }
      ]
    }
  ]
}